--- a/Xamarin.Forms.GoogleMaps/Xamarin.Forms.GoogleMaps.nuspec
+++ b/Xamarin.Forms.GoogleMaps/Xamarin.Forms.GoogleMaps.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata minClientVersion="2.8.3">
-		<id>Xamarin.Forms.GoogleMaps</id>
+		<id>Xamarin.Forms.GoogleMaps.v2</id>
 		<title>Xamarin.Forms.GoogleMaps</title>
-		<version>3.2.1</version>
+		<version>3.3.0</version>
 		<releaseNotes>
 # 3.2.1
 
@@ -26,7 +26,7 @@
 
 ## New Features
 
-* #519 Add support ItemsSource and ItemTemplate for Pins 
+* #519 Add support ItemsSource and ItemTemplate for Pins
 
 # 3.0.6
 
@@ -68,14 +68,14 @@ full release notes is here - https://github.com/amay077/Xamarin.Forms.GoogleMaps
 		<copyright>Copyright 2016-2019</copyright>
 		<iconUrl>https://raw.githubusercontent.com/amay077/Xamarin.Forms.GoogleMaps/master/logo.png</iconUrl>
 		<license type="file">LICENSE.txt</license>
-    <projectUrl>https://github.com/amay077/Xamarin.Forms.GoogleMaps</projectUrl>
+    <projectUrl>https://github.com/INHack20/Xamarin.Forms.GoogleMaps</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Yet another Maps library for Xamarin.Forms that optimized for Google maps.</description>
 		<summary>Yet another Maps library for Xamarin.Forms that optimized for Google maps</summary>
 		<tags>xamarin forms maps xamarinforms xamarinformsmaps xamarin.forms.maps xamarinformsgooglemaps xamarin.forms.googlemaps google googlemap</tags>
 	<dependencies>
       <group>
-        <dependency id="Xamarin.Forms" version="3.0.0.482510" />
+        <dependency id="Xamarin.Forms" version="4.2" />
       </group>
       <group targetFramework="MonoAndroid80">
         <dependency id="Xamarin.GooglePlayServices.Maps" version="60.1142.1"/>
